# f1tenth_planning

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  python_install.sh  python_uninstall.sh  requirements.txt  setup.py  uninstall.sh
configs/control/: dynamic_mpc.yaml  kinematic_mpc.yaml  lqr.yaml  pure_pursuit.yaml  stanley.yaml
docs/: conf.py  contribute.md  develop_log.md  requirements.txt
docs/control/: stanley.md
docs/extensions/: gdscript.py
docs/perception/: particle_filter.md
docs/planning/: fgm.md  graph_planner.md  lattice_planner.md
docs/src/: conf.py  index.rst
docs/src/api/: controllers.rst  index.rst  planners.rst
docs/src/control/: kinematic_mpc.md  lqr.md  pure_pursuit.md
docs/src/planning/: lane_switcher.md  wall_follow.md
examples/control/: Spielberg_raceline.csv  dynamic_mpc.py  example_map.yaml  example_waypoints.csv  kinematic_mpc.py  kinematic_mppi.py  learning_mpc.py  levine_centerline.csv  levine_raceline.csv  levine_slam.pgm  levine_slam.yaml  lqr.py  nonlinear_dmpc.py  nonlinear_frenet_dmpc.py  nonlinear_kmpc.py  nonlinear_mpc.py  pure_pursuit.py  stanley.py
examples/estimation/: ukf_example.py
examples/planning/: Spielberg_map.yaml  config_example_map.yaml  lattice_planner.py  lattice_planner_example.py  run_lattice_planner.py  test_time.py  test_visualize.py
f1tenth_lattice_planner/: package.xml  setup.cfg  setup.py
f1tenth_lattice_planner/f1tenth_lattice_planner/: download_files.sh  gdown.pl  lattice_planner.py  lattice_planner_utils.py
f1tenth_planner_base/: package.xml  setup.cfg  setup.py
f1tenth_planner_base/f1tenth_planner_base/: base.py
f1tenth_planning/control/: __init__.py  controller.py
f1tenth_planning/control/config/: controller_config.py  dynamics_config.py
f1tenth_planning/control/dynamic_mpc/: dynamic_mpc.py
f1tenth_planning/control/kinematic_mpc/: kinematic_mpc.py
f1tenth_planning/control/lqr/: lqr.py
f1tenth_planning/estimation/: ukf_estimator.py
f1tenth_planning/planning/: planner.py
f1tenth_planning/utils/: loading.py  trajectory.py  utils.py  visualize.py
f1tenth_pure_pursuit/: package.xml  setup.cfg  setup.py
f1tenth_pure_pursuit/f1tenth_pure_pursuit/: pure_pursuit.py
planner_base/: package.xml  setup.cfg  setup.py
planner_base/planner_base/: utils.py
pure_pursuit/: package.xml  setup.py
pure_pursuit/config/: pure_pursuit.yaml
pure_pursuit/pure_pursuit/: pure_pursuit.py
tests/: test_lqr.py  test_pure_pursuit.py  test_stanley.py
(+36 files in other folders)
