[tool.poetry]
name = "f1tenth-planning"
version = "0.1.0"
description = "F1TENTH Motion Planning Library"
authors = [
    "Hongrui Zheng", 
    "Renukanandan Tumu", 
    "Luigi Berducci", 
    "Ahmad Amine",
]
maintainers = [
    "Hongrui Zheng",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9 <3.12"
f1tenth_gym = {git = "git@github.com:f1tenth/f1tenth_gym", branch = "v1.0.0"}
cvxpy = "^1.4.2"
pyclothoids = "^0.1.5"
matplotlib = "^3.8.4"
pillow = "^10.3.0"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
